--- a/Publish.android/zltx_hoolai/project.properties
+++ b/Publish.android/zltx_hoolai/project.properties
@@ -9,10 +9,10 @@
 
 dex.force.jumbo=true
 android.library.reference.1=../../proj.android
-android.library.reference.2=kit-libs/com-crashlytics-sdk-android_crashlytics-ndk-labs
-android.library.reference.3=kit-libs/com-crashlytics-sdk-android_crashlytics
+#android.library.reference.2=kit-libs/com-crashlytics-sdk-android_crashlytics-ndk-labs
+#android.library.reference.3=kit-libs/com-crashlytics-sdk-android_crashlytics
 # android.library.reference.4=../../proj.android/GamesServices_lib/BaseGameUtils/src/main
 # Project target.
 target=android-23
-manifestmerger.enabled=false
+#manifestmerger.enabled=false
 
