添加翰林院世界入口判断

--- a/IF/Resources/local/text_zh_CN.ini
+++ b/IF/Resources/local/text_zh_CN.ini
@@ -8278,7 +8278,7 @@
 3140048=有时候防守是最好的进攻，记得邀请盟友来帮忙防守。
 3140049=主公大人，资源可以通过滑动一口气收集起来的。
 3140050=多使用资源提升道具，可以大幅度提高资源产量。
-3140051=诺维雅
+3140051=小乔
 3140052=可恶，现在父王正在为寻找“龙之秘宝”身陷险境，我却只能在城墙上看着南方。
 3140053=愿天佑父王，早日带回“龙之秘宝”，到那时我们便可扫清叛逆。
 3140054=祖父毕生都在追求着“龙之秘宝”，相信他一定会保佑父王寻回秘宝。
@@ -9152,3 +9152,4 @@ new100045=点击换服
 new100046=我玩过的服务器
 new100047=所有服务器
 10614=封测礼包
+new100048=翰林院还未开启!
