去掉积分墙tapjoy

--- a/Publish.android/zltx_hoolai/AndroidManifest.xml
+++ b/Publish.android/zltx_hoolai/AndroidManifest.xml
@@ -215,9 +215,9 @@
 		
 		
 		<!-- Tabjoy begin -->
-		 <activity android:name="com.tapjoy.TJCOffersWebView" android:configChanges="keyboardHidden|orientation"/> 
-		 <activity android:name="com.tapjoy.TapjoyFeaturedAppWebView" android:configChanges="keyboardHidden|orientation"/> 
-		 <activity android:name="com.tapjoy.TapjoyVideoView" android:configChanges="keyboardHidden|orientation"/>
+		 <!-- <activity android:name="com.tapjoy.TJCOffersWebView" android:configChanges="keyboardHidden|orientation"/>  -->
+		 <!-- <activity android:name="com.tapjoy.TapjoyFeaturedAppWebView" android:configChanges="keyboardHidden|orientation"/>  -->
+		 <!-- <activity android:name="com.tapjoy.TapjoyVideoView" android:configChanges="keyboardHidden|orientation"/> -->
 		
 		
 		 <!--  millennialmedia -->
